--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
-*.pyc
+.pio/
+.vscode/
+*.py[cod]
+*$py.class
 *__pyc*/
-*.pio
-*.vscode
-*.rst
+*.DS_Store
+*.autosave
+*~
+*#
+Change*
+CHANGE*
+README*
+COPY*
+*CONTRIBU*
 LICENSE*
-**/*README*
+HACKING*
 *.png
 *.jpg
