--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,25 @@ LICENSE*
 HACKING*
 *.png
 *.jpg
+*.swp
+*.lck
+*.log
+*.ewt
+*.ewd
+*.crf
+*.dep
+*.map
+*.hex
+*.bin
+*bak
+*.txt
+*.lst
+*.sct
+*.elf
+*.ini
+*.gbr
+*.drl
+*.ods
+*.odg
+*.csv
+*.xml
